--- a/flashcards/resources/css/app.css
+++ b/flashcards/resources/css/app.css
@@ -1,4 +1,5 @@
 * {
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -7,4 +8,21 @@ html,
 body {
   height: 100%;
   width: 100%;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#header-left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#header-title {
+  font-size: 2em;
 }
