--- a/flashcards/resources/views/partials/header.edge
+++ b/flashcards/resources/views/partials/header.edge
@@ -4,5 +4,5 @@
     <a href="#" class="header-link">Voir la liste de mes Decks</a>
     <a href="#" class="header-link">Créer un nouveau Deck</a>
   </div>
-  <button>Connexion</button>
+  <button id="header-btn">Connexion</button>
 </header>
