--- a/flashcards/resources/css/app.css
+++ b/flashcards/resources/css/app.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
@@ -17,7 +18,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: lightgrey;
+  background-color: #efefef;
 }
 
 #header-left {
@@ -42,11 +43,11 @@ header {
 }
 
 .header-link:hover {
-  color: purple;
+  color: #9966cc;
 }
 
 #header-btn {
-  background-color: purple;
+  background-color: #9966cc;
   color: white;
   margin-top: 15px;
   padding: 10px 15px;
@@ -58,8 +59,18 @@ header {
 #header-btn:hover {
   background-color: white;
   cursor: pointer;
-  color: purple;
+  color: #9966cc;
 }
 
 footer {
+  color: white;
+  font-size: 1em;
+  width: 100vw;
+  text-align: center;
+  padding: 30px 0px;
+  background-color: #9966cc;
+}
+
+main {
+  flex: 1;
 }
