--- a/flashcards/resources/css/app.css
+++ b/flashcards/resources/css/app.css
@@ -21,7 +21,7 @@ header {
   background-color: #efefef;
 }
 
-#header-left {
+#header-nav {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -73,4 +73,48 @@ footer {
 
 main {
   flex: 1;
+}
+
+.page-title {
+  font-size: 2.2rem;
+  width: 100vw;
+  text-align: center;
+  margin: 15px 0px 50px 0px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+  width: 100%;
+  max-width: 80rem;
+}
+
+.deck-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #9966cc;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  text-align: center;
+  border: 1px solid rgba(139, 92, 246, 0.3);
+  text-decoration: none;
+}
+
+.deck-card:hover {
+  background-color: rgba(109, 40, 217, 0.4);
+}
+
+.deck-card-title {
+  font-size: 2rem;
+  font-weight: 600;
+  color: white;
+}
+
+.deck-card-user {
+  font-size: 1rem;
+  color: white;
 }
