--- a/flashcards/resources/views/pages/home.edge
+++ b/flashcards/resources/views/pages/home.edge
@@ -1,5 +1,13 @@
 @component('components/layout', { title: 'Accueil' })
-<div>
-  <p>Bonjour</p>
+<h2 class="page-title">Liste des decks publiés</h2>
+<div class="cards">
+  @each((deck, index) in decks)
+  <a href="#" class="deck-card">
+    <h2 class="deck-card-title">{{deck.title}}</h2>
+    <p class="deck-card-user">{{deck.user.username}}</p>
+  </a>
+  @end
+
 </div>
-@end
+
+@endcomponent
