--- a/flashcards/resources/views/partials/header.edge
+++ b/flashcards/resources/views/partials/header.edge
@@ -1,8 +1,8 @@
 <header>
-  <div id="header-left">
-    <a href="#" id="header-title">FlashCards</a>
+  <nav id="header-nav">
+    <a href="{{route('home')}}" id="header-title">FlashCards</a>
     <a href="#" class="header-link">Voir la liste de mes Decks</a>
     <a href="#" class="header-link">Créer un nouveau Deck</a>
-  </div>
+  </nav>
   <button id="header-btn">Connexion</button>
 </header>
