--- a/flashcards/resources/views/pages/home.edge
+++ b/flashcards/resources/views/pages/home.edge
@@ -2,7 +2,7 @@
 <h2 class="page-title">Liste des decks publiés</h2>
 <div class="cards">
   @each((deck, index) in decks)
-  <a href="#" class="deck-card">
+  <a href="{{ route('deck.show', {id: deck.id}) }}" class="deck-card">
     <h2 class="deck-card-title">{{deck.title}}</h2>
     <p class="deck-card-user">{{deck.user.username}}</p>
   </a>
