fix(auth): changed the authentication method from tokens to cookie

--- a/app-flashcards/resources/views/components/layout.edge
+++ b/app-flashcards/resources/views/components/layout.edge
@@ -11,6 +11,7 @@
 
 <body>
   @include('partials/header')
+  @include('partials/flash')
   <main class="container">
     {{{await $slots.main()}}}
   </main>
