--- a/app-flashcards/resources/views/pages/home.edge
+++ b/app-flashcards/resources/views/pages/home.edge
@@ -6,6 +6,9 @@
     <h2 class="deck-card-title">{{deck.title}}</h2>
     <p class="deck-card-user">{{deck.user.username}}</p>
   </a>
+  {{-- <form action="{{route('deck.destroy', {id: deck.index}) }}?_method=DELETE" method="POST" style="display: inline">
+    {{ csrfField()}}
+  </form> --}}
   @end
 
 </div>
