--- a/app-flashcards/resources/views/components/layout.edge
+++ b/app-flashcards/resources/views/components/layout.edge
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   @vite(['resources/css/app.css', 'resources/js/app.js'])
-  <title>{{title || "Flashcards"}}</title>
+  <title>{{title || "Application de Flashcards"}}</title>
 </head>
 
 <body>
