--- a/app-flashcards/resources/views/partials/header.edge
+++ b/app-flashcards/resources/views/partials/header.edge
@@ -2,7 +2,7 @@
   <nav id="header-nav">
     <a href="{{route('home')}}" id="header-title">FlashCards</a>
     <a href="#" class="header-link">Voir la liste de mes Decks</a>
-    <a href="#" class="header-link">Créer un nouveau Deck</a>
+    <a href="{{route('deck.create')}}" class="header-link">Créer un nouveau Deck</a>
   </nav>
   <button id="header-btn">Connexion</button>
 </header>
