--- a/app-flashcards/resources/views/pages/decks/edit.edge
+++ b/app-flashcards/resources/views/pages/decks/edit.edge
@@ -1,6 +1,6 @@
 @component('components/layout', {title: title})
 <h3>{{title}}</h3>
-<form action="{{route('deck.store')}}" method="post">
+<form action="{{route('deck.update', {id: deck.id})}}" method="post">
   @include('partials/createOrUpdateForm')
 </form>
 @endcomponent
