--- a/app-flashcards/resources/views/pages/decks/show.edge
+++ b/app-flashcards/resources/views/pages/decks/show.edge
@@ -1,5 +1,6 @@
 @component('components/layout', {title: title})
 <h2>{{data[0].title}} par {{data[0].user.username}}</h2>
+<a href="{{{route('deck.edit', {id: data[0].id})}}}">MODIFIER</a>
 <div>
   @each((card, index) in data[1])
   <p>{{card.question}}</p>
