feat(login): you can now login in the app

--- a/app-flashcards/resources/views/partials/flash.edge
+++ b/app-flashcards/resources/views/partials/flash.edge
@@ -9,3 +9,9 @@
   {{ old('error') }}
 </div>
 @end
+
+@error('E_INVALID_CREDENTIALS')
+<div class="alert alert-danger">
+  {{ $message}}
+</div>
+@end
