--- a/app-flashcards/resources/views/partials/header.edge
+++ b/app-flashcards/resources/views/partials/header.edge
@@ -1,8 +1,24 @@
+@eval(await auth.check())
 <header>
   <nav id="header-nav">
     <a href="{{route('home')}}" id="header-title">FlashCards</a>
     <a href="#" class="header-link">Voir la liste de mes Decks</a>
     <a href="{{route('deck.create')}}" class="header-link">Créer un nouveau Deck</a>
   </nav>
-  <button id="header-btn">Connexion</button>
+  <div class="login-container">
+    @if(auth.isAuthenticated)
+    {{ auth.user.username }} ({{auth.user.isAdmin ? 'admin' : 'user'}})
+    <form action="#" method="post">
+      {{csrfField()}}
+      <button type="submit" class="btn btn-logout">Se déconnecter</button>
+    </form>
+    @else
+    <form action="{{route('auth.handleLogin') }}" method="post">
+      {{csrfField()}}
+      @!component('components/input', {name: 'username', label: "Nom d'utilisateur"})
+      @!component('components/input', {name: 'password', label: 'Mot de passe', type: 'password'})
+      <button type="submit" class="btn btn-logic">Se connecter</button>
+    </form>
+    @endif
+  </div>
 </header>
