feat(logout): you can now logout of the user connected

--- a/app-flashcards/resources/views/partials/header.edge
+++ b/app-flashcards/resources/views/partials/header.edge
@@ -8,7 +8,7 @@
   <div class="login-container">
     @if(auth.isAuthenticated)
     {{ auth.user.username }} ({{auth.user.isAdmin ? 'admin' : 'user'}})
-    <form action="#" method="post">
+    <form action="{{route('auth.handleLogout')}}" method="post">
       {{csrfField()}}
       <button type="submit" class="btn btn-logout">Se déconnecter</button>
     </form>
