feat(rights): added some rights to some routes and there is now a proper login page

--- a/app-flashcards/resources/views/pages/decks/show.edge
+++ b/app-flashcards/resources/views/pages/decks/show.edge
@@ -1,6 +1,8 @@
 @component('components/layout', {title: title})
 <h2>{{data[0].title}} par {{data[0].user.username}}</h2>
+@if(auth.user.isAdmin)
 <a href="{{{route('deck.edit', {id: data[0].id})}}}">MODIFIER</a>
+@endif
 <div>
   @each((card, index) in data[1])
   <p>{{card.question}}</p>
