--- a/app-flashcards/resources/views/partials/header.edge
+++ b/app-flashcards/resources/views/partials/header.edge
@@ -13,12 +13,13 @@
       <button type="submit" class="btn btn-logout">Se déconnecter</button>
     </form>
     @else
-    <form action="{{route('auth.handleLogin') }}" method="post">
+    <a href="{{route('login')}}">SE CONNECTER</a>
+    {{-- <form action="{{route('auth.handleLogin') }}" method="post">
       {{csrfField()}}
       @!component('components/input', {name: 'username', label: "Nom d'utilisateur"})
       @!component('components/input', {name: 'password', label: 'Mot de passe', type: 'password'})
       <button type="submit" class="btn btn-logic">Se connecter</button>
-    </form>
+    </form> --}}
     @endif
   </div>
 </header>
