--- a/app-flashcards/resources/views/pages/login.edge
+++ b/app-flashcards/resources/views/pages/login.edge
@@ -1,8 +1,12 @@
 @component('components/layout', { title: 'Se connecter' })
-<form action="{{route('auth.handleLogin') }}" method="post">
-  {{csrfField()}}
-  @!component('components/input', {name: 'username', label: "Nom d'utilisateur"})
-  @!component('components/input', {name: 'password', label: 'Mot de passe', type: 'password'})
-  <button type="submit" class="btn btn-logic">Se connecter</button>
-</form>
+<div id="form-div">
+  <h2 class="form-title">Se connecter</h2>
+  <form action="{{route('auth.handleLogin') }}" method="post" id="form-login">
+    {{csrfField()}}
+    @!component('components/input', {name: 'username', label: "Nom d'utilisateur"})
+    @!component('components/input', {name: 'password', label: 'Mot de passe', type: 'password'})
+    <button type="submit" class="btn btn-logic">Se connecter</button>
+  </form>
+</div>
+
 @endcomponent
