--- a/app-flashcards/resources/views/pages/decks/show.edge
+++ b/app-flashcards/resources/views/pages/decks/show.edge
@@ -1,12 +1,27 @@
 @component('components/layout', {title: title})
 <h2>{{data[0].title}} par {{data[0].user.username}}</h2>
 @if(auth.user.isAdmin)
-<a href="{{{route('deck.edit', {id: data[0].id})}}}">MODIFIER</a>
+<a href="{{{route('deck.edit', {id: data[0].id})}}}">Modifier le nom du deck</a>
+<a href="{{{route('cards.create', {id: data[0].id})}}}">Ajouter une carte</a>
 @endif
-<div>
-  @each((card, index) in data[1])
-  <p>{{card.question}}</p>
-  <p>{{card.answer}}</p>
-  @end
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Question</th>
+      <th>Réponse</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    @each((card, index) in data[1])
+    <tr>
+      <td>{{index + 1}}</td>
+      <td>{{card.question}}</td>
+      <td>{{card.answer}}</td>
+      <td class="container-options"><a href="#">Modifier</a><a href="#">Supprimer</a></td>
+    </tr>
+    @end
+  </tbody>
+</table>
 @endcomponent
