feat(cards edit): you can now edit a card from a deck)

--- a/app-flashcards/resources/views/pages/decks/create.edge
+++ b/app-flashcards/resources/views/pages/decks/create.edge
@@ -1,6 +1,6 @@
 @component('components/layout', {title: title})
 <h3>{{title}}</h3>
 <form action="{{route('deck.store')}}" method="post">
-  @include('partials/createOrUpdateForm')
+  @include('partials/decksForm')
 </form>
 @endcomponent
