--- a/app-flashcards/resources/views/pages/cards/edit.edge
+++ b/app-flashcards/resources/views/pages/cards/edit.edge
@@ -1,7 +1,7 @@
 @component('components/layout', {title: title})
 <h2>Ajouter une carte</h2>
 <h3>Deck : {{deck.title}}</h3>
-<form action="{{route(`cards.store`, {id: deck.id})}}" method="post">
+<form action="{{route(`cards.update`, {deck_id: deck.id, card_id: card.id})}}" method="post">
   @include('partials/cardsForm')
 </form>
 @endcomponent
