fix(deck show): fixed a but where you couldn't see the index of a deck if you weren't logged in

--- a/app-flashcards/resources/views/pages/decks/show.edge
+++ b/app-flashcards/resources/views/pages/decks/show.edge
@@ -1,5 +1,6 @@
 @component('components/layout', {title: title})
 <h2>{{data[0].title}} par {{data[0].user.username}}</h2>
+@if(auth.isAuthenticated)
 @if(auth.user.isAdmin)
 <a href="{{route('deck.edit', {id: data[0].id})}}">Modifier le nom du deck</a>
 <a href="{{route('cards.create', {id: data[0].id})}}">Ajouter une carte</a>
@@ -9,6 +10,7 @@
     DELETE
   </button>
 </form>
+@endif
 @endif
 <table>
   <thead>
