fix(deck/show): removed the published select in the add and update a deck form

--- a/app-flashcards/resources/views/pages/decks/user.edge
+++ b/app-flashcards/resources/views/pages/decks/user.edge
@@ -5,8 +5,8 @@
   <thead>
     <tr>
       <th>#</th>
-      <th>Title</th>
-      <th>Status</th>
+      <th>Titre</th>
+      <th>Statut</th>
       <th>Actions</th>
     </tr>
   </thead>
