--- a/app-flashcards/resources/views/pages/decks/user.edge
+++ b/app-flashcards/resources/views/pages/decks/user.edge
@@ -27,7 +27,10 @@
         <a href="{{route('deck.show', {id: deck.id})}}">Voir la liste des cartes</a>
         <a href="{{route('cards.create', {id: deck.id})}}">Créer une nouvelle carte</a>
         <a href="#">Jouer</a>
-        <a href="#">Publier</a>
+        <form action="{{route('deck.publish', {id: deck.id})}}?_method=PUT" method="POST">
+          {{csrfField()}}
+          <button type="submit">{{deck.isPublished ? 'Dépublier' : 'Publier'}}</button>
+        </form>
       </td>
     </tr>
     @end
