--- a/app-flashcards/resources/views/pages/decks/show.edge
+++ b/app-flashcards/resources/views/pages/decks/show.edge
@@ -1,5 +1,6 @@
 @component('components/layout', {title: title})
 <h2>{{data[0].title}} par {{data[0].user.username}}</h2>
+<a href="{{route('deck.play', {id: data[0].id})}}">Jouer</a>
 @if(auth.isAuthenticated)
 @if(auth.user.isAdmin || auth.user.id === data[0].user.id)
 <form action="{{route('deck.publish', {id: data[0].id})}}?_method=PUT" method="POST" style="display: inline">
