feat(register): you can now register as a new user

--- a/app-flashcards/resources/views/pages/login.edge
+++ b/app-flashcards/resources/views/pages/login.edge
@@ -7,6 +7,7 @@
     @!component('components/input', {name: 'password', label: 'Mot de passe', type: 'password'})
     <button type="submit" class="btn btn-logic">Se connecter</button>
   </form>
+  <p>Vous ne possédez aucun compte ? <a href="{{route('register')}}">Créer un compte</a></p>
 </div>
 
 @endcomponent
