feat(register): you must now confirm your password when registering

--- a/app-flashcards/resources/views/pages/register.edge
+++ b/app-flashcards/resources/views/pages/register.edge
@@ -8,6 +8,9 @@
     @!component('components/input', {name: 'username', label: "Nom d'utilisateur"})
     @!component('components/input', {name: 'email', label: "Adresse mail", type: 'email'})
     @!component('components/input', {name: 'password', label: "Mot de passe", type: 'password'})
+    @!component('components/input', {name: 'password_confirmation', label: "Confirmer le mot de passe",
+    type:
+    'password'})
     <button type="submit" class="btn btn-logic">Se connecter</button>
   </form>
 </div>
