--- a/app-flashcards/resources/views/components/input.edge
+++ b/app-flashcards/resources/views/components/input.edge
@@ -1,7 +1,7 @@
 <label for="{{name}}">{{label}} :</label>
-<input type="{{type || text}}" name="{{name}}" id="{{name}}" value="{{value || ''}}" placeholder="{{label}}">
+<input type="{{type || text}}" name="{{name}}" id="{{name}}" value="{{value || ''}}">
 @inputError(name)
 @each(message in $messages)
-<p class="text-danger">{{message}}</p>
+<p class=" text-danger">{{message}}</p>
 @end
 @end
