feat(cred): changed language for the invalid credential message

--- a/app-flashcards/resources/views/partials/flash.edge
+++ b/app-flashcards/resources/views/partials/flash.edge
@@ -12,6 +12,6 @@
 
 @error('E_INVALID_CREDENTIALS')
 <div class="alert alert-danger">
-  {{ $message}}
+  Identifiant ou mot de passe incorrect
 </div>
 @end
