--- a/app-flashcards/resources/views/components/input.edge
+++ b/app-flashcards/resources/views/components/input.edge
@@ -1,7 +1,8 @@
-<label for="{{name}}">{{label}} :</label>
-<input type="{{type || text}}" name="{{name}}" id="{{name}}" value="{{value || ''}}">
-@inputError(name)
-@each(message in $messages)
-<p class=" text-danger">{{message}}</p>
-@end
-@end
+<div class="input"><label for="{{name}}">{{label}} :</label>
+  <input type="{{type || text}}" name="{{name}}" id="{{name}}" value="{{value || ''}}">
+  @inputError(name)
+  @each(message in $messages)
+  <p class=" text-danger">{{message}}</p>
+  @end
+  @end
+</div>
