--- a/app-flashcards/resources/views/pages/register.edge
+++ b/app-flashcards/resources/views/pages/register.edge
@@ -1,7 +1,7 @@
 @component('components/layout', { title: 'Créer un compte' })
-<div id="form-div">
+<div id="form-div-register">
   <h2 class="form-title">Créer un compte</h2>
-  <form action="{{route('auth.handleRegister') }}" method="post" id="form-register">
+  <form action="{{route('auth.handleRegister') }}" method="post" class="form-auth">
     {{csrfField()}}
     @!component('components/input', {name: 'firstname', label: "Prénom"})
     @!component('components/input', {name: 'lastname', label: "Nom de famille"})
@@ -11,7 +11,8 @@
     @!component('components/input', {name: 'password_confirmation', label: "Confirmer le mot de passe",
     type:
     'password'})
-    <button type="submit" class="btn btn-logic">Se connecter</button>
+    <button type="submit" class="form-submit">Créer son compte</button>
+    <p>Vous possédez déjà un compte ? <a href="{{route('login')}}" class="link">Se connecter</a></p>
   </form>
 </div>
 
