feat(home): add the style for the home page

--- a/app-flashcards/resources/views/pages/decks/user.edge
+++ b/app-flashcards/resources/views/pages/decks/user.edge
@@ -1,5 +1,5 @@
 @component('components/layout', {title: title})
-<h2>Liste des decks</h2>
+<h2 class="page-title">Liste des decks</h2>
 
 <table>
   <thead>
