--- a/app-flashcards/resources/css/app.css
+++ b/app-flashcards/resources/css/app.css
@@ -115,7 +115,10 @@ footer {
 }
 
 main {
+  height: 100%;
+  width: 100%;
   flex: 1;
+  align-items: center;
 }
 
 /* ----- LOGIN AND REGISTER PAGE ----- */
@@ -192,4 +195,45 @@ main {
 .link {
   text-decoration: none;
   color: rgb(106, 106, 255);
+}
+
+/* ---------- HOME PAGE ------------- */
+.page-title {
+  font-size: 2rem;
+  margin-bottom: 30px;
+  text-align: center;
+  margin-top: 50px;
+}
+
+#home-page {
+  margin: 0px 50px 50px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.deck-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-decoration: none;
+  color: #e4e4e7;
+  width: 15vw;
+  height: 20vh;
+  text-align: center;
+  border: 1px solid white;
+  margin: 15px;
+  background-color: #18181b;
+}
+
+.deck-card:hover {
+  background-color: #27272a;
 }
