--- a/app-flashcards/resources/views/pages/decks/edit.edge
+++ b/app-flashcards/resources/views/pages/decks/edit.edge
@@ -1,6 +1,9 @@
 @component('components/layout', {title: title})
-<h3>{{title}}</h3>
-<form action="{{route('deck.update', {id: deck.id})}}" method="post">
-  @include('partials/decksForm')
-</form>
+<div class="deck-form">
+  <h2 class="page-title">{{title}}</h2>
+  <form action="{{route('deck.update', {id: deck.id})}}" method="post">
+    @include('partials/decksForm')
+  </form>
+</div>
+
 @endcomponent
